Updated domain names

--- a/overrides/partials/actions.html
+++ b/overrides/partials/actions.html
@@ -1,6 +1,6 @@
 {% if page.edit_url %}
-    {% set edit = "https://github.com/ruudvh/ruud.is/edit" %}
-    {% set view = "https://raw.githubusercontent.com/ruudvh/ruud.is" %}
+    {% set edit = "https://github.com/ruudvh/notes/edit" %}
+    {% set view = "https://raw.githubusercontent.com/ruudvh/notes" %}
     <a href="{{ page.edit_url }}" title="{{ lang.t('edit.link.title') }}" class="md-content__button md-icon">
         {% include ".icons/material/file-edit-outline.svg" %}
     </a>
